Behold the mighty action menu! It still needs lots of work though.

--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
 <head>
 <!-- Theme specific CSS files are loaded later by the ThemeManager -->
 <link id="base_stylesheet" rel="stylesheet" type="text/css" href="css/base.css" />
+<link rel="stylesheet" type="text/css" href="css/action_menu.css" />
 <link rel="stylesheet" type="text/css" href="css/simple_select.css" />
 <link rel="stylesheet" type="text/css" href="css/tipsy.css" />
 <link rel="stylesheet" type="text/css" href="css/jquery.contextMenu.css" />
@@ -51,6 +52,7 @@ if(!twitterBackend.authenticated() && !twitterBackend.tokenRequested()) {
 <script type="text/javascript" src="lib/shortener_lib.js"></script>
 <script type="text/javascript" src="lib/simple_select.js"></script>
 <script type="text/javascript" src="lib/tweet_transforms.js"></script>
+<script type="text/javascript" src="lib/action_menu.js"></script>
 <script type="text/javascript" src="lib/tweets_assembler.js"></script>
 <script>
 $.ajaxSetup({
