--- a/background.html
+++ b/background.html
@@ -839,15 +839,20 @@ TweetManager.prototype = {
         }, 120000);
         return;
       }
-      _this.followingUsers = _this.followingUsers.concat(users);
-      _this.followingUsers.sort(function(a, b) {
-        return a.screen_name.toUpperCase().localeCompare(b.screen_name.toUpperCase());
+      for(var i = 0, len = users.length; i < len; ++i) {
+        var user = users[i];
+        _this.followingUsersMap[user.screen_name] = user;
+        _this.followingUsersNames.push(user.screen_name);
+      }
+      _this.followingUsersNames.sort(function(a, b) {
+        a.toUpperCase().localeCompare(b.toUpperCase());
       });
     }, usersIdList);
   },
 
   retrieveFollowingUsers: function() {
-    this.followingUsers = [];
+    this.followingUsersNames = [];
+    this.followingUsersMap = {};
     var _this = this;
     this.twitterBackend.friendsIds(function(success, usersData) {
       if(!success) {
@@ -869,9 +874,52 @@ TweetManager.prototype = {
     });
   },
 
-  getUsersToComplete: function() {
-    return this.followingUsers;
-  }
+  getFollowingUsers: function() {
+    return this.followingUsersNames;
+  },
+
+  getFollowingUsersMap: function() {
+    return this.followingUsersMap;
+  },
+
+  resetTimeline: function(timelineId) {
+    var timeline = this.getTimeline(timelineId);
+    if(timeline) {
+      timeline.reset();
+    }
+  },
+
+  followUser: function(callback, username) {
+    var _this = this;
+    this.twitterBackend.follow(function(success, userData) {
+      if(success) {
+        _this.followingUsersMap[userData.screen_name] = userData;
+        _this.followingUsersNames.push(userData.screen_name);
+        _this.followingUsersNames.sort(function(a, b) {
+          a.toUpperCase().localeCompare(b.toUpperCase());
+        });
+        _this.resetTimeline(TimelineTemplate.HOME);
+        _this.resetTimeline(TimelineTemplate.UNIFIED);
+      }
+      callback(success, userData);
+    }, username);
+  },
+
+  unfollowUser: function(callback, username) {
+    var _this = this;
+    this.twitterBackend.unfollow(function(success, userData) {
+      if(success) {
+        delete _this.followingUsersMap[userData.screen_name];
+        var position = $.inArray(userData.screen_name);
+        if(position > -1) {
+          _this.followingUsersNames.splice(position, 1);
+        }
+        _this.resetTimeline(TimelineTemplate.HOME);
+        _this.resetTimeline(TimelineTemplate.UNIFIED);
+      }
+      callback(success, userData);
+    }, username);
+  },
 };
 
 /* Clean up old versions mess */
