Locales report link in the options page

--- a/options.html
+++ b/options.html
@@ -565,5 +565,6 @@ function updatePredictedHitsCount() {
   </div>
 </div>
 
+<a class="locales_report" href="locales.html">Locales Report</a>
 </body>
 </html>
