--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta http-equiv="Cache-Control" content="no-cache">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="google-site-verification" content="1rEVGioqAO99isMIDpH4UoBdehcMJB1EN5LTZi09-Nw" />
     <meta name="keywords" content="google chrome, chromium, extension, twitter">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js" type="text/javascript"></script>
 	<title>Chromed Bird</title>
