--- a/locales.html
+++ b/locales.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script type="text/javascript" src="lib/3rdparty/jquery.js"></script>
-
 <title>Locales Data</title>
   
 <script>
 var LocaleTable = function() {
   this.locales = {};
-  this.tableEl = $('<table id="localeTable">').appendTo(document.body);
+  this.tableEl = Util.makeElem('table', {id: "localeTable"});
+  document.body.appendChild(this.tableEl);
   this.loadData();
 };
 LocaleTable.prototype = {
@@ -27,7 +26,7 @@ LocaleTable.prototype = {
     for(var i = 0, len = this.orderedLocaleCodes.length; i < len; ++i) {
       var localeData = this.locales[this.orderedLocaleCodes[i]];
       for(var keyword in localeData) {
-        if($.inArray(keyword, this.orderedKeywords) == -1) {
+        if(Util.inArray(keyword, this.orderedKeywords) == -1) {
           this.orderedKeywords.push(keyword);
         }
       }
@@ -37,14 +36,14 @@ LocaleTable.prototype = {
 
   drawTable: function() {
     this.prepareLocaleData();
-    this.tableEl.empty();
+    this.tableEl.innerHTML = "";
 
     var emptyCount = {};
     for(var i = 0, len = this.orderedKeywords.length; i < len; ++i) {
       var keyword = this.orderedKeywords[i];
-      var rowEl = $('<tr>');
-      var titleCellEl = $('<th>').html(keyword);
-      rowEl.append(titleCellEl);
+      var rowEl = Util.makeElem('tr');
+      var titleCellEl = Util.makeElem('th', null, keyword);
+      rowEl.appendChild(titleCellEl);
       var isKeywordComplete = true;
       for(var j = 0, len2 = this.orderedLocaleCodes.length; j < len2; ++j) {
         var localeCode = this.orderedLocaleCodes[j];
@@ -56,28 +55,29 @@ LocaleTable.prototype = {
           emptyCount[localeCode] = emptyCount[localeCode] ? emptyCount[localeCode] + 1 : 1;
           isKeywordComplete = false;
         }
-        var cellEl = $('<td>').addClass(className).html(message);
-        rowEl.append(cellEl);
+        var cellEl = Util.makeElem('td', {'class': className}, message);
+        rowEl.appendChild(cellEl);
       }
       var isPropertyInDefault = this.locales[this.defaultLocale] && this.locales[this.defaultLocale].hasOwnProperty(keyword);
       if(!isPropertyInDefault) {
-        rowEl.addClass('invalid');
+        rowEl.className = 'invalid';
       } else if(!isKeywordComplete) {
-        rowEl.addClass('incomplete');
+        rowEl.className = 'incomplete';
       }
-      this.tableEl.append(rowEl);
+      this.tableEl.appendChild(rowEl);
     }
 
-    var titleRowEl = $('<tr>').append($('<th>'));
+    var titleRowEl = Util.makeElem('tr');
+    titleRowEl.appendChild(Util.makeElem('th'));
     for(var k = 0, len3 = this.orderedLocaleCodes.length; k < len3; ++k) {
       var code = this.orderedLocaleCodes[k];
-      var localeCellEl = $('<th>').html(code);
+      var localeCellEl = Util.makeElem('th', null, code);
       if(emptyCount[code]) {
-        localeCellEl.append($('<span>').addClass('empty_count').html(' (' + emptyCount[code] + ')'))
+        localeCellEl.appendChild(Util.makeElem('span', {'class': 'empty_count'}, ' (' + emptyCount[code] + ')'));
       }
-      titleRowEl.append(localeCellEl);
+      titleRowEl.appendChild(localeCellEl);
     }
-    this.tableEl.prepend(titleRowEl);
+    this.tableEl.insertBefore(titleRowEl, this.tableEl.childNodes[0]);
   },
 
   loadData: function() {
@@ -88,55 +88,42 @@ LocaleTable.prototype = {
         _this.locales = locales;
         _this.drawTable();
       });
-    })
+    });
   },
 
   loadDefaultLocale: function(callback) {
-    $.ajax({
-      type: 'GET',
-      url: 'manifest.json',
-      data: {},
-      dataType: 'json',
-      timeout: 5000,
-      success: function(data, status, xhr) {
-        if(data) {
-          callback(data.default_locale);
-        }
+    Util.ajax(function(status, data) {
+      if(data) {
+        data = JSON.parse(data);
+        callback(data.default_locale);
       }
-    });
+    }, 'manifest.json');
   },
 
   loadLocaleMessages: function(callback) {
     var remainingLocalesMap = {};
-    $.each(LocaleTable.availableLocaleCodes, function() {
-      remainingLocalesMap[this] = true;
-    });
+    for(var k = 0, codesLen = LocaleTable.availableLocaleCodes.length; k < codesLen; ++k) {
+      remainingLocalesMap[LocaleTable.availableLocaleCodes[k]] = true;
+    }
     var locales = {};
     var updateLocaleCallback = function(localeCode, data) {
       delete remainingLocalesMap[localeCode];
       if(data) {
         locales[localeCode] = data;
       }
-      if($.isEmptyObject(remainingLocalesMap)) {
+      if(Util.isEmptyObject(remainingLocalesMap)) {
         callback(locales);
       }
     };
     for(var i = 0, len = LocaleTable.availableLocaleCodes.length; i < len; ++i) {
       var localeCode = LocaleTable.availableLocaleCodes[i];
       (function(localeCode) {
-        $.ajax({
-          type: 'GET',
-          url: '_locales/' + localeCode + '/messages.json',
-          data: {},
-          dataType: 'json',
-          timeout: 5000,
-          success: function(data, status, xhr) {
-            updateLocaleCallback(localeCode, data);
-          },
-          error: function() {
-            updateLocaleCallback(localeCode, null);
+        Util.ajax(function(status, data) {
+          if(data) {
+            data = JSON.parse(data);
           }
-        });
+          updateLocaleCallback(localeCode, data);
+        }, '_locales/' + localeCode + '/messages.json');
       })(localeCode);
     }
   }
@@ -146,10 +133,44 @@ LocaleTable.availableLocaleCodes = ["am", "ar", "bg", "bn", "ca", "cs", "da", "d
   "ml", "mr", "nb", "nl", "or", "pl", "pt", "pt_BR", "pt_PT", "ro", "ru", "sk", "sl", "sr", "sv", "sw",
   "ta", "te", "th", "tr", "uk", "vi", "zh", "zh_CN", "zh_TW"];
 
-$(function() {
-  new LocaleTable();
-});
-
+var Util = {
+  ajax: function(callback, url) {
+    var req = new XMLHttpRequest();
+    req.open('GET', url, true);
+    req.onreadystatechange = function() {
+      if(req.readyState == 4) {
+        callback(req.status, req.responseText, req);
+      }
+    };
+    req.send();
+  },
+  makeElem: function(elem, attrs, content) {
+    var el = document.createElement(elem);
+    if(attrs) {
+      for (var attrName in attrs) {
+        el.setAttribute(attrName, attrs[attrName]);
+      }
+    }
+    if(content) {
+      el.innerHTML = content;
+    }
+    return el;
+  },
+  inArray: function(elem, array) {
+    for(var i = 0, len = array.length; i < len; ++i) {
+      if(elem == array[i]) {
+        return i;
+      }
+    }
+    return -1;
+  },
+  isEmptyObject: function(obj) {
+    for(var p in obj) {
+      return false;
+    }
+    return true;
+  }
+};
 </script>
 <style>
 #localeTable {
@@ -176,5 +197,8 @@ span.empty_count {
 </style>
 </head>
 <body>
+  <script>
+    new LocaleTable();
+  </script>
 </body>
 </html>
