Fixing desktop notifications.

--- a/tweets_notifier.html
+++ b/tweets_notifier.html
@@ -4,6 +4,7 @@
   <script type="text/javascript" src="lib/3rdparty/jquery.js"></script>
   <script type='text/javascript' src='lib/3rdparty/jquery.tipsy.js'></script>
 
+  <script type="text/javascript" src="lib/any_click.js"></script>
   <script type="text/javascript" src="lib/tweet_transforms.js"></script>
   <script type="text/javascript" src="lib/timeline_template.js"></script>
   <script type="text/javascript" src="lib/tweets_assembler.js"></script>
