Fixing weird resizing issues (too small or too large popups).

--- a/popup.html
+++ b/popup.html
@@ -238,11 +238,27 @@ var ThemeManager = {
 
   popupSizeData: Persistence.popupSize(),
 
+  setMinMaxWidth: function(width, height) {
+    var minWidth = 450;
+    var maxWidth = window.innerWidth - 14;
+    if(width > maxWidth) {
+      width = maxWidth;
+    }
+    if(width < minWidth) {
+      width = minWidth;
+    }
+    ThemeManager.setPopupSize(width, height);
+  },
+
   initWindowResizing: function() {
     ThemeManager.handleWindowResizing();
     if(!ThemeManager.isPopup) {
       return;
     }
+    setTimeout(function() {
+      // Delay the execution of this code to allow the window to resize first.
+      ThemeManager.setMinMaxWidth($(".timeline").width(), $(".timeline").height());
+    }, 1000);
     $(".timeline").resizable({
       handles: 'e, s, se',
       minWidth: 450,
@@ -252,6 +268,7 @@ var ThemeManager = {
       },
       stop: function(e, ui) {
         var $this = $(this);
+        ThemeManager.setMinMaxWidth($this.width(), $this.height());
         ThemeManager.popupSizeData.save($this.width() + 'x' + $this.height());
       }
     });
