--- a/options.html
+++ b/options.html
@@ -14,6 +14,7 @@
 <title>Chromed Bird Options</title>
 
 <script type="text/javascript">
+var ImageService = chrome.extension.getBackgroundPage().ImageService;
 var IconCreator = chrome.extension.getBackgroundPage().IconCreator;
 var tweetManager = chrome.extension.getBackgroundPage().TweetManager.instance;
 var twitterBackend = tweetManager.twitterBackend;
@@ -61,6 +62,13 @@ $(function() {
   for(var key in SHORTENERS_BACKEND) {
     var desc = SHORTENERS_BACKEND[key].desc;
     $("select[name='url_shortener']").append($("<option>").attr('value', key).text(desc));
+  }
+
+  for(var i = 0, len = ImageService.services.length; i < len; ++i) {
+    var service = ImageService.services[i];
+    if(service.hasUpload()) {
+      $("select[name='image_upload_service']").append($("<option>").attr('value', service.domain).text(service.domain));
+    }
   }
 
   var onShortenerChange = function() {
@@ -441,6 +449,12 @@ function updatePredictedHitsCount() {
     </p>
     <label for="share_include_title" class="i18n" id="l_share_include_title">Include page title (sharing):</label>
     <input type="checkbox" name="share_include_title"><br>
+  </fieldset>
+
+  <fieldset>
+    <legend class="i18n" id="g_image_service">Image Service</legend>
+    <label for="url_shortener" class="i18n" id="l_image_up_service">Image Upload Service:</label>
+    <select name="image_upload_service"></select>
   </fieldset>
 
   <fieldset>
