--- a/tweets_notifier.html
+++ b/tweets_notifier.html
@@ -19,7 +19,7 @@
   var OptionsBackend = chrome.extension.getBackgroundPage().OptionsBackend;
   var urlExpander = chrome.extension.getBackgroundPage().urlExpander;
   var tweetManager = chrome.extension.getBackgroundPage().TweetManager.instance;
-  var ImageServices = chrome.extension.getBackgroundPage().ImageServices;
+  var ImageService = chrome.extension.getBackgroundPage().ImageService;
 
   $(function() {
     var fadeTimeout = OptionsBackend.get('notification_fade_timeout');
