Fixing duplicated localized string. Thx usercard

--- a/options.html
+++ b/options.html
@@ -387,7 +387,7 @@ function updatePredictedHitsCount() {
         <th></th>
         <th class="i18n" id="l_tweet_notificacion">Tweet Notification</th>
         <th class="i18n" id="l_change_icon">Change Icon</th>
-        <th class="i18n" id="l_icon_color">Icon Color</th>
+        <th class="i18n" id="l_icon_color_column">Icon Color</th>
       <tr>
         <td class="label i18n" id="notif_home">Home:</td>
         <td><input type="checkbox" name="home_on_page"></td>
