Allowing users to change the default locale.

--- a/background.html
+++ b/background.html
@@ -27,6 +27,7 @@
 
 <script type="text/javascript" src="lib/send_queue.js"></script>
 <script type="text/javascript" src="lib/image_services.js"></script>
+<script type="text/javascript" src="lib/locales.js"></script>
 <script>
 function initializeJQueryOptions() {
   $.ajaxSetup({
