--- a/popup.html
+++ b/popup.html
@@ -144,6 +144,7 @@ var Paginator = {
     this.needsMore = false;
     if(shouldScrollTop) {
       $("#timeline-" + tweetManager.currentTimelineId + ' .inner_timeline').scrollTop(0);
+      tweetManager.getCurrentTimeline().currentScroll = 0;
     }
   },
   nextPage: function() {
